<resources>
    <string name="app_name">Mengoss</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_the_school">About the school</string>
    <string name="academics">Academics</string>
    <string name="students">Students</string>
    <string name="contact_us">Contact us</string>
    <string name="quot_akwana_akila_ayomba_quot">\"Akwana Akila Ayomba\"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="academics1">Academics</string>
    <string name="school_pta">School PTA</string>
    <string name="previous_headteachers">Previous Headteachers</string>
    <string name="school_s_anthem">School\'s Anthem</string>
    <string name="board_of_governors">Board of Governors</string>
    <string name="school_history">School history</string>
    <string name="about">About the school</string>
</resources>