<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />



        <item
            android:id="@+id/academics"
            android:icon="@drawable/academics"
            android:title="@string/academics" />

        <item
            android:id="@+id/students"
            android:icon="@drawable/students"
            android:title="@string/students" />


        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/contact"
            android:title="@string/contact_us" />
    </group>
    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/history"
                android:icon="@drawable/about"
                android:title="@string/school_history" />

            <item
                android:id="@+id/board"
                android:icon="@drawable/about"
                android:title="@string/board_of_governors" />

            <item
                android:id="@+id/pta"
                android:icon="@drawable/about"
                android:title="@string/school_pta" />

            <item
                android:id="@+id/prevht"
                android:icon="@drawable/about"
                android:title="@string/previous_headteachers" />

            <item
                android:id="@+id/anthem"
                android:icon="@drawable/about"
                android:title="@string/school_s_anthem" />

        </menu>




    </item>


</menu>